# PruneGNN

./: .gitignore  README.md  prune_gnn_setup.sh
ModuleMapGraph/: .gitlab-ci.yml  CMakeLists.txt  README.md  Tracking.code-workspace  configure.RTX8000.sh  configure.cpu.sh  configure.gpu.sh  events-hits.txt  events-particles.txt  excel-data.txt  setup.py  setup_cvmfs_lcg.cpu.sh  setup_cvmfs_lcg.gpu.sh  setup_cvmfs_lcg105.cpu.sh  setup_cvmfs_lcg105.gpu.sh  tracking.cfg  tracking.doc
ModuleMapGraph/CI/CPU/scripts/: GraphBuilder-2023.CI.sh  GraphBuilder-2024.CI.sh  GraphBuilder.10evts.1.sh  GraphBuilder.10evts.2.sh  ModuleMap-2023.CI.sh  ModuleMap-2024.CI.sh  ModuleMapCreator.10evts.1.sh  ModuleMapCreator.10evts.2.sh  ModuleMapFileMerger.sh  run.CI.cpu.sh
ModuleMapGraph/CPU/: CMakeLists.txt
ModuleMapGraph/CPU/headers/: TTree_hits  TTree_particles  common_options  edge  edge_true  geometric_cuts  graph  graph_creator  graph_true  hit  hits  hits_infos  module_doublet  module_map_triplet  module_triplet  parameters  particle  particles  strip_hit_pair  strip_module_DB  vertex  vertex_true
ModuleMapGraph/CPU/include/: TTree_hits.hpp  TTree_particles.hpp  colors.hpp  edge.hpp  edge_true.hpp  event_id.hpp  geometric_cuts.hpp  graph.hpp  graph_creator.hpp  graph_true.hpp  hit.hpp  hits.hpp  hits_infos.hpp  module_doublet.hpp  module_map_triplet.hpp  module_triplet.hpp  particle.hpp  particles.hpp  strip_hit_pair.hpp  strip_module_DB.hpp  vertex.hpp  vertex_true.hpp
ModuleMapGraph/CPU/scripts/: GraphBuilder.slurm.sh  ModuleMapCreator.sh  ModuleMapCreator.slurm.sh  ModuleMapCyclesCleaner.sh  ModuleMapFileMerger.sh  compile.g++.gprof.sh  compile.g++.sh  compile.intel.sh  root_converter.sh  run.intel-programs.sh
ModuleMapGraph/CPU/src/: TTree_hits.cpp  TTree_particles.cpp  common_options.cpp  edge.cpp  edge_true.cpp  event_id.cpp  geometric_cuts.cpp  graph.cpp  graph_creator.cpp  graph_true.cpp  hit.cpp  hits.cpp  hits_infos.cpp  module_doublet.cpp  module_map_triplet.cpp  module_triplet.cpp  particle.cpp  particles.cpp  strip_hit_pair.cpp  strip_module_DB.cpp  vertex.cpp
ModuleMapGraph/CPU/utils/: GraphBuilder.cpp  ModuleMapCreator.cpp  ModuleMapCyclesCleaner.cpp  ModuleMapFileMerger.cpp  ModuleMapRoot2Txt.cpp  c++.vs.cpp  root_converter.cpp
ModuleMapGraph/GPU/: CMakeLists.txt
ModuleMapGraph/GPU/headers/: CUDA_TTree_hits  CUDA_geometric_cuts  CUDA_graph  CUDA_graph_creator  CUDA_mask  CUDA_module_map_doublet  CUDA_module_map_triplet  CUDA_prescan  CUDA_quick_sort  CUDA_stream_compaction  CUDA_walkthrough
ModuleMapGraph/GPU/include/: TTree_hits.cuh  graph.cuh
ModuleMapGraph/GPU/scripts/: GraphBuilder.slurm.sh  WalkThrough.sh  compile.nvc++.sh  compile.nvcc.sh  run.nvcc-programs.sh
ModuleMapGraph/GPU/src/: TTree_hits.cu  graph_creator.cu  module_map_doublet.cu  module_map_triplet.cu  prescan.cu  stream_compaction.cu
ModuleMapGraph/GPU/utils/: WalkThrough.cu
ModuleMapGraph/MPI/: CMakeLists.txt
ModuleMapGraph/MPI/headers/: receive  send
ModuleMapGraph/MPI/scripts/: ModuleMapCreator.mpi.sh  ModuleMapCreator.scheduler.mpi.sh  ModuleMapReschedule.sh  ModuleMapScheduler.alt.sh  ModuleMapScheduler.hpss.sh  ModuleMapScheduler.sh  compile.mpi.sh  run.mpi-programs.sh
ModuleMapGraph/MPI/src/: receive.cpp  send.cpp
ModuleMapGraph/MPI/utils/: ModuleMapCreator.mpi.cpp  ModuleMapReschedule.cpp  ModuleMapScheduler.cpp
ModuleMapGraph/cmake/: ModuleMapGraphConfig.cmake.in
ModuleMapGraph/dumper/: dumper-creation.sh  dumper-run.sh
ModuleMapGraph/scripts/: GraphBuilder.sh  clean.sh  compile.gui.sh  compile.sh  profile.sh
ModuleMapGraph/slurm/: GraphBuilder.GPU.slurm  GraphBuilder.slurm  ModuleMapCreator.scheduler.slurm  ModuleMapCreator.slurm  ModuleMapScheduler.slurm  WalkThrough.slurm  launchGraphCreation.sh  makeGraphsSlurm.sh
experiments/inference/: analyze.py  dataset.py  performance_driver.py
experiments/inference/config/: inference_config.py
experiments/pruning/GNN/: dataset.py
experiments/pruning/config/: train_config.py
module_map/: GraphBuilder.cu  TTree_hits.cuh  common_options.hpp  geometric_cuts.cu  graph.cu  graph_creator.cuh  mask.cu  module_map.cc  module_map_doublet.cuh  module_map_triplet.cuh  quick_sort.cu  setup.py  walkthrough.cu  walkthrough.cuh
prune_gnn/: setup.py
